--- a/.github/workflows/ytm.yml
+++ b/.github/workflows/ytm.yml
@@ -1,7 +1,7 @@
 name: Get ouTube-m3u8
 on:
   schedule:
-    - cron: '0 */3 * * *' #設定每3小時自動獲取
+    - cron: '0 */3 * * *'
 
   pull_request:
     branches:
