--- a/.github/workflows/ytm.yml
+++ b/.github/workflows/ytm.yml
@@ -23,7 +23,7 @@ jobs:
         sudo curl -L https://github.com/yt-dlp/yt-dlp/releases/latest/download/yt-dlp -o /usr/local/bin/yt-dlp
         sudo chmod a+rx /usr/local/bin/yt-dlp
 
-Test
+#Test
 
     - name: Get Test.m3u8
       run: |
