--- a/.github/workflows/ytm.yml
+++ b/.github/workflows/ytm.yml
@@ -1,7 +1,7 @@
-name: Get YouTube Live m3u8
+name: Get Youtube HLS
 on:
   schedule:
-    - cron: '0 0/3 * * *'
+    - cron: '0 */3 * * *' #設定每3小時自動獲取
 
   pull_request:
     branches:
@@ -23,408 +23,18 @@ jobs:
         sudo curl -L https://github.com/yt-dlp/yt-dlp/releases/latest/download/yt-dlp -o /usr/local/bin/yt-dlp
         sudo chmod a+rx /usr/local/bin/yt-dlp
 
-#Test
+#channel-01
 
-    - name: Get spongeboblofi.m3u8
+    - name: Get channel-01.m3u8
       run: |
-        touch ./spongeboblofi.m3u8
-        sudo cat >./kids/spongeboblofi.m3u8 <<EOL
+        touch ./channel-01.m3u8
+        sudo cat >./channel-01.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/UCYOlpfBbG9JuGaJ0zQ7jJ5g/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/spongeboblofi.m3u8
-        EOL
-        
-    - name: Get disneyxd.m3u8
-      run: |
-        touch ./disneyxd.m3u8
-        sudo cat >./kids/disneyxd.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/UCktaw9L-f65LzUUdjmCFkbQ/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/disneyxd.m3u8
-        EOL
-    - name: Get nhstudioz.m3u8
-      run: |
-        touch ./nhstudioz.m3u8
-        sudo cat >./kids/nhstudioz.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/UCxtwjNPrymSvS4UD_6HgcxQ/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/nhstudioz.m3u8
-        EOL
-        
-    - name: Get Get beetoonss.m3u8
-      run: |
-        touch ./beetoonss.m3u8
-        sudo cat >./kids/beetoonss.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/UCcip9fzGawR1Or5G15UwFLA/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/beetoonss.m3u8
+        $(yt-dlp --print urls https://www.youtube.com/c/%E4%B8%89%E7%AB%8BLIVE%E6%96%B0%E8%81%9E/live)
         EOL
 
-    - name: Get okolele-arabic.m3u8
-      run: |
-        touch ./okolele-arabic.m3u8
-        sudo cat >./kids/okolele-arabic.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/UCS0B3UT8eyVA_Cbgh5hXzpg/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/okolele-arabic.m3u8
-        EOL
-
-    - name: Get barbieFrancais.m3u8
-      run: |
-        touch ./barbieFrancais.m3u8
-        sudo cat >./kids/barbieFrancais.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/UCgMuh0GiItMVbIA8Qb4WAUA/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/barbiefrancais.m3u8
-        EOL
-
-    - name: Get barbiedeutsch.m3u8
-      run: |
-        touch ./barbiedeutsch.m3u8
-        sudo cat >./kids/barbiedeutsch.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/UCSTlH3dDtCBT94sjO2MTyww/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/barbiedeutsch.m3u8
-        EOL
-
-    - name: Get barbieencastellano.m3u8
-      run: |
-        touch ./barbieencastellano.m3u8
-        sudo cat >./kids/barbieencastellano.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/UCYHaQQHvPQdfXE1mHnYrtbQ/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/barbieencastellano.m3u8
-        EOL
-
-    - name: Get barbieitalia.m3u8
-      run: |
-        touch ./barbieitalia.m3u8
-        sudo cat >./kids/barbieitalia.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/UCEn7y3Ivt7m3ioZYnEo8OCg/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/barbieitalia.m3u8
-        EOL
-
-    - name: Get barbie.m3u8
-      run: |
-        touch ./barbie.m3u8
-        sudo cat >./kids/barbie.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/UCadtap8RYMNy8w4K9lXhzpQ/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/barbie.m3u8
-        EOL
-
-    - name: Get pyjamasquesofficielle.m3u8
-      run: |
-        touch ./pyjamasquesofficielle.m3u8
-        sudo cat >./kids/pyjamasquesofficielle.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/UCmwN7oJTsAeiPPcV4FF8HRw/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/pyjamasquesofficielle.m3u8
-        EOL
-
-    - name: Get simonsuperlapin.m3u8
-      run: |
-        touch ./simonsuperlapin.m3u8
-        sudo cat >./kids/simonsuperlapin.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/UCo9j7fWproKYTos4_RY-LUw/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/simonsuperlapin.m3u8
-        EOL
-
-    - name: Get simonesuperconiglio.m3u8
-      run: |
-        touch ./simonesuperconiglio.m3u8
-        sudo cat >./kids/simonesuperconiglio.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/UCm8eTdJzNxgZuv8mzVLTsbA/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/simonesuperconiglio.m3u8
-        EOL
-
-    - name: Get simonsuperHase.m3u8
-      run: |
-        touch ./simonsuperHase.m3u8
-        sudo cat >./kids/simonsuperHase.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/UC8TsX50arK9Ap1oNIBQmQgw/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/simonsuperHase.m3u8
-        EOL
-
-    - name: Get simonsuperConejoes.m3u8
-      run: |
-        touch ./simonsuperConejoes.m3u8
-        sudo cat >./kids/simonsuperConejoes.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/UCaF8Cwux8-_81MVDx87Eo5Q/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/simonsuperConejoes.m3u8
-        EOL
-
-    - name: Get simonsuperconejo.m3u8
-      run: |
-        touch ./simonsuperconejo.m3u8
-        sudo cat >./kids/simonsuperconejo.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/UCWuFYjKpPN5-mfyTakr2rTQ/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/simonsuperconejo.m3u8
-        EOL
-    - name: Get simonsuperrabbit.m3u8
-      run: |
-        touch ./simonsuperrabbit.m3u8
-        sudo cat >./kids/simonsuperrabbit.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/UCMAGJ9Hhe_IjsiuYHrns8ag/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/simonsuperrabbit.m3u8
-        EOL
-    - name: Get tomthetowtruck_french.m3u8
-      run: |
-        touch ./tomthetowtruck_french.m3u8
-        sudo cat >./kids/tomthetowtruck_french.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/UCFuxlEegePDT570taAI0BPA/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/tomthetowtruck_french.m3u8
-        EOL
-    - name: Get pollypocket.m3u8
-      run: |
-        touch ./pollypocket.m3u8
-        sudo cat >./kids/pollypocket.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/UC8UjlImzgVo1o6ziWxAre3Q/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/pollypocket.m3u8
-        EOL
-    - name: Get yulchannel.m3u8
-      run: |
-        touch ./yulchannel.m3u8
-        sudo cat >./kids/yulchannel.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/UCBMHl8HHFGdBlsRssaZjFoQ/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/yulchannel.m3u8
-        EOL
-    - name: Get nastyaartemmiaesp.m3u8
-      run: |
-        touch ./nastyaartemmiaesp.m3u8
-        sudo cat >./kids/nastyaartemmiaesp.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/UCLt9LS1IhrRuPIdsnzc21qQ/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/nastyaartemmiaesp.m3u8
-        EOL
-    - name: Get catsfamilyenfrancais.m3u8
-      run: |
-        touch ./catsfamilyenfrancais.m3u8
-        sudo cat >./kids/catsfamilyenfrancais.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/UCil6uAMf2IXD1SkiwZq3xhw/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/catsfamilyenfrancais.m3u8
-        EOL
-    - name: Get supertoonstv-fr.m3u8
-      run: |
-        touch ./supertoonstv-fr.m3u8
-        sudo cat >./kids/supertoonstv-fr.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/UCE6LObtIIyUymAejzHJ73GA/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/supertoonstv-fr.m3u8
-        EOL
-    - name: Get increditales_french.m3u8
-      run: |
-        touch ./increditales_french.m3u8
-        sudo cat >./kids/increditales_french.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/UCil6uAMf2IXD1SkiwZq3xhw/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/increditales_french.m3u8
-        EOL
-    - name: Get littleangelfrancais.m3u8
-      run: |
-        touch ./littleangelfrancais.m3u8
-        sudo cat >./kids/littleangelfrancais.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/UCSp2f6yQYuzOavit1V81pZA/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/littleangelfrancais.m3u8
-        EOL
-    - name: Get peppapigfrancaisofficielle.m3u8
-      run: |
-        touch ./peppapigfrancaisofficielle.m3u8
-        sudo cat >./kids/peppapigfrancaisofficielle.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/UCXptamDYEVcU4JCio30hYTw/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/peppapigfrancaisofficielle.m3u8
-        EOL
-    - name: Get apprendreensamusant-looloo2227.m3u8
-      run: |
-        touch ./apprendreensamusant-looloo2227.m3u8
-        sudo cat >./kids/apprendreensamusant-looloo2227.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/UCPD_hP3mWnWEk9S1FCFJg9A/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/apprendreensamusant-looloo2227.m3u8
-        EOL
-    - name: Get powerrangersenfantsofficielle.m3u8
-      run: |
-        touch ./powerrangersenfantsofficielle.m3u8
-        sudo cat >./kids/powerrangersenfantsofficielle.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/UCnWWi51HAmGJEyoPNynPVvA/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/powerrangersenfantsofficielle.m3u8
-        EOL
-    - name: Get talkingfriendsfrance.m3u8
-      run: |
-        touch ./talkingfriendsfrance.m3u8
-        sudo cat >./kids/talkingfriendsfrance.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/UCNlAox6aLNlE3M6QP2nzv7w/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/talkingfriendsfrance.m3u8
-        EOL
-    - name: Get tannyenfrancais.m3u8
-      run: |
-        touch ./tannyenfrancais.m3u8
-        sudo cat >./kids/tannyenfrancais.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/UC1VGGT9RfunvCdvZf_gqVBg/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/tannyenfrancais.m3u8
-        EOL
-    - name: Get babyfirsttvfrancais.m3u8
-      run: |
-        touch ./babyfirsttvfrancais.m3u8
-        sudo cat >./kids/babyfirsttvfrancais.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/UC5a8AMsnEEWYg95DXl5EXkQ/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/babyfirsttvfrancais.m3u8
-        EOL
-    - name: Get supertruck_french.m3u8
-      run: |
-        touch ./supertruck_french.m3u8
-        sudo cat >./kids/supertruck_french.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/UC4u2o6tyE4vTrErXY9AN6Rw/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/supertruck_french.m3u8
-        EOL
-    - name: Get toyorlive.m3u8
-      run: |
-        touch ./toyorlive.m3u8
-        sudo cat >./kids/toyorlive.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/UCZbpK_Lgctew3YNELlG2ecw/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/toyorlive.m3u8
-        EOL
-
-    - name: Get Test.m3u8
-      run: |
-        touch ./Test.m3u8
-        sudo cat >./kids/Test.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/xxxx/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/test.m3u8
-        EOL
-
-    - name: Get Test.m3u8
-      run: |
-        touch ./Test.m3u8
-        sudo cat >./kids/Test.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/xxxx/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/test.m3u8
-        EOL
-
-    - name: Get Test.m3u8
-      run: |
-        touch ./Test.m3u8
-        sudo cat >./kids/Test.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/xxxx/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/test.m3u8
-        EOL
-
-    - name: Get Test.m3u8
-      run: |
-        touch ./Test.m3u8
-        sudo cat >./kids/Test.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/xxxx/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/test.m3u8
-        EOL
-
-    - name: Get Test.m3u8
-      run: |
-        touch ./Test.m3u8
-        sudo cat >./kids/Test.m3u8 <<EOL
-        #EXTM3U
-        #EXT-X-VERSION:3
-        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/channel/xxxx/live)
-        https://raw.githubusercontent.com/MassinDV/videos/main/test.m3u8
-        EOL
-        
     - name: git add
       run: |
         git add -A
