--- a/.github/workflows/ytm.yml
+++ b/.github/workflows/ytm.yml
@@ -25,14 +25,14 @@ jobs:
 
 #channel-01
 
-    - name: Get spongeboblofi.m3u8
+    - name: Get channel-01.m3u8
       run: |
-        touch ./spongeboblofi.m3u8
-        sudo cat >kids/spongeboblofi.m3u8 <<EOL
+        touch ./channel-01.m3u8
+        sudo cat >./kids/channel-01.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls $(yt-dlp --print urls https://www.youtube.com/channel/UCYOlpfBbG9JuGaJ0zQ7jJ5g/live)
+        $(yt-dlp --print urls https://www.youtube.com/c/%E4%B8%89%E7%AB%8BLIVE%E6%96%B0%E8%81%9E/live)
         EOL
 
     - name: git add
