--- a/.github/workflows/ytm.yml
+++ b/.github/workflows/ytm.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Get channel-01.m3u8
       run: |
         touch ./channel-01.m3u8
-        sudo cat >./kids/channel-01.m3u8 <<EOL
+        sudo cat >./channel-01.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
