--- a/.github/workflows/ytm.yml
+++ b/.github/workflows/ytm.yml
@@ -25,14 +25,45 @@ jobs:
 
 #channel-01
 
-    - name: Get channel-01.m3u8
+    - name: Get spongeboblofi.m3u8
       run: |
-        touch ./channel-01.m3u8
-        sudo cat >./channel-01.m3u8 <<EOL
+        touch ./spongeboblofi.m3u8
+        sudo cat >./spongeboblofi.m3u8 <<EOL
         #EXTM3U
         #EXT-X-VERSION:3
         #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
-        $(yt-dlp --print urls https://www.youtube.com/c/%E4%B8%89%E7%AB%8BLIVE%E6%96%B0%E8%81%9E/live)
+        $(yt-dlp --print urls https://www.youtube.com/channel/UCYOlpfBbG9JuGaJ0zQ7jJ5g/live)
+        https://raw.githubusercontent.com/MassinDV/videos/main/spongeboblofi.m3u8
+        EOL
+    - name: Get disneyxd.m3u8.m3u8
+      run: |
+        touch ./disneyxd.m3u8
+        sudo cat >./disneyxd.m3u8 <<EOL
+        #EXTM3U
+        #EXT-X-VERSION:3
+        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
+        $(yt-dlp --print urls https://www.youtube.com/channel/UCktaw9L-f65LzUUdjmCFkbQ/live)
+        https://raw.githubusercontent.com/MassinDV/videos/main/disneyxd.m3u8
+        EOL
+    - name: Get nhstudioz.m3u8
+      run: |
+        touch ./nhstudioz.m3u8
+        sudo cat >./nhstudioz.m3u8 <<EOL
+        #EXTM3U
+        #EXT-X-VERSION:3
+        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
+        $(yt-dlp --print urls https://www.youtube.com/channel/UCxtwjNPrymSvS4UD_6HgcxQ/live)
+        https://raw.githubusercontent.com/MassinDV/videos/main/nhstudioz.m3u8
+        EOL
+    - name: Get beetoonss.m3u8
+      run: |
+        touch ./beetoonss.m3u8
+        sudo cat >./beetoonss.m3u8 <<EOL
+        #EXTM3U
+        #EXT-X-VERSION:3
+        #EXT-X-STREAM-INF:PROGRAM-ID=1,BANDWIDTH=2560000
+        $(yt-dlp --print urls https://www.youtube.com/channel/UCcip9fzGawR1Or5G15UwFLA/live)
+        https://raw.githubusercontent.com/MassinDV/videos/main/beetoonss.m3u8
         EOL
 
     - name: git add
